add new patch endpoint about min and max rate of water drinking
