# swagger.json
@@ -23,6 +23,10 @@
     {
       "name": "User",
       "description": "User endpoints"
+    },
+    {
+      "name": "Water",
+      "description": "Managing information about consumed water"
     }
   ],
   "paths": {
@@ -141,6 +145,59 @@
           "500": {
             "$ref": "#/components/responses/Error500"
           }
+        }
+      }
+    }
+  },
+  "/water/rate": {
+    "patch": {
+      "security": [
+        {
+          "bearerAuth": []
+        }
+      ],
+      "tags": ["water"],
+      "summary": "Update daily norm of water",
+      "requestBody": {
+        "required": true,
+        "description": "Daily norm of water",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+              "dailyNorma": {
+                "type": "number",
+                "default": 2000,
+                "maximum": 15000,
+                "minimum": 0
+                }
+              }
+            }
+          }
+        }
+      },
+      "responses": {
+        "200": {
+          "description": "OK",
+          "content": {
+            "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+              "dailyNorma": {
+                "type": "number",
+                "default": 2000,
+                "maximum": 15000,
+                "minimum": 0
+                }
+              }
+            }
+            }
+          }
+          },
+        "400": {
+          "$ref": "#/components/responses/Error400"
         }
       }
     }
